# nuggit

./: .gitignore  Cargo.toml  README.md  TODO.txt
.gitea/workflows/: build.yml  gitea.yml
.github/workflows/: build.yml  release.yml
src/: cli.rs  commit.rs  config.rs  index.rs  main.rs
src/commands/: add.rs  commit.rs  diff.rs  init.rs  log.rs  mod.rs  status.rs
src/utils/: files.rs  logger.rs  mod.rs
