[package]
name = "nuggit"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
flate2 = "1.1.0"
fs_extra = "1.3.0"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.26"
serde = { version = "1.0.218", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.140"
sha1 = "0.10.6"
simplelog = "0.12.2"
tempfile = "3.17.1"
thiserror = "2.0.12"
